--- a/index.html
+++ b/index.html
@@ -51,49 +51,112 @@
         </div>
     </header>
 
-    <section class="curriculum-section">
+    <section style="background-image: url(assets/bg.png);" class="curriculum-section">
         <h2 class="section-title">Standard Curriculum</h2>
         <div class="title-underline"></div>
 
         <div class="curriculum-cards-container">
-            <div class="curriculum-card card-kinder">
+            <div class="curriculum-card card-kinder" style="background: linear-gradient(to bottom, rgba(233, 244, 249, 100), rgba(255,255,255,0));">
                 <div class="card-image-box">
-                    <img src="https://i.ibb.co/6y4nJjL/kinder.png" alt="Kinder illustration" class="card-image">
+                    <img src="assets/kinder.png" alt="Kinder illustration" class="card-image">
                 </div>
                 <h3 class="card-title">Kinder (3-6) Years</h3>
                 <p class="card-description">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus sdlis parturient</p>
                 <a href="#" class="read-more-link link-blue">Read More</a>
             </div>
 
-            <div class="curriculum-card card-elementary">
+            <div class="curriculum-card card-elementary" style="background: linear-gradient(to bottom, rgba(255, 244, 220, 100), rgba(255,255,255,0));">
                 <div class="card-image-box">
-                    <img src="https://i.ibb.co/30Lq56q/elementary.png" alt="Elementary illustration" class="card-image">
+                    <img src="assets/elementary.png" alt="Elementary illustration" class="card-image">
                 </div>
                 <h3 class="card-title">Elementary School</h3>
                 <p class="card-description">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus sdlis parturient</p>
                 <a href="#" class="read-more-link link-orange">Read More</a>
             </div>
 
-            <div class="curriculum-card card-middle">
+            <div class="curriculum-card card-middle" style="background: linear-gradient(to bottom, rgba(242, 232, 255, 100), rgba(255,255,255,0));">
                 <div class="card-image-box">
-                    <img src="https://i.ibb.co/0tJ2z7p/middle.png" alt="Middle illustration" class="card-image">
+                    <img src="assets/middle.png" alt="Middle illustration" class="card-image">
                 </div>
                 <h3 class="card-title">Middle (10-16) Years</h3>
                 <p class="card-description">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus sdlis parturient</p>
                 <a href="#" class="read-more-link link-purple">Read More</a>
             </div>
-
         </div>
 
-        <div class="curriculum-navigation">
+        <div style="margin: 24px;" class="curriculum-navigation">
             <div class="nav-dot-indicator"></div>
             <div class="nav-arrows">
-                <button class="nav-arrow left-arrow"><i class="fas fa-chevron-left"></i></button>
-                <button class="nav-arrow right-arrow"><i class="fas fa-chevron-right"></i></button>
+                <button style="background-color: #FEA301; border-radius: 24px; border: none; color: wheat; height: 40px; width: 40px;" class="nav-arrow left-arrow"><i style="font-size: 16px;" class="fas fa-chevron-left"></i></button>
+                <button style="background-color: #FEA301; border-radius: 24px; border: none; color: wheat; height: 40px; width: 40px;" class="nav-arrow right-arrow"><i style="font-size: 16px;" class="fas fa-chevron-right"></i></button>
             </div>
         </div>
-
     </section>
 
-</body> 
+    <section class="our-stories-section">
+        <h2 class="section-title-stories">Our Stories</h2>
+        <div class="stories-grid-container">
+
+            <div class="story-card large-card">
+                <div class="story-image-wrapper">
+                    <img src="https://i.ibb.co/L8y6b6m/story1-large.jpg" alt="Toddlers coloring in classroom" class="story-card-image">
+                    <span class="story-date">November 19, 2019</span>
+                </div>
+                <div class="story-content">
+                    <h3 class="story-title">A fun toddler coloring training on classroom</h3>
+                    <p class="story-description">Beautiful branding for changes by Never Now in Australia. changes is a platform for open discussion in an inclusive and collaborative environment, providing the...</p>
+                </div>
+            </div>
+
+            <div class="story-card small-card">
+                <div class="story-image-wrapper">
+                    <img src="https://i.ibb.co/Q8Q49rG/story2-small.jpg" alt="Kids in school uniform" class="story-card-image">
+                    <span class="story-date">November 19, 2019</span>
+                </div>
+                <div class="story-content">
+                    <h3 class="story-title">Find out if a school fits the family's needs</h3>
+                </div>
+            </div>
+
+            <div class="story-card small-card">
+                <div class="story-image-wrapper">
+                    <img src="https://i.ibb.co/sK6W47X/story3-small.jpg" alt="Children reading outdoors" class="story-card-image">
+                    <span class="story-date">November 19, 2019</span>
+                </div>
+                <div class="story-content">
+                    <h3 class="story-title">Summer math & literacy centres for kids</h3>
+                </div>
+            </div>
+
+            <div class="story-card small-card">
+                <div class="story-image-wrapper">
+                    <img src="https://i.ibb.co/F82s2p2/story4-small.jpg" alt="Kids dressed as superheroes" class="story-card-image">
+                    <span class="story-date">September 10, 2019</span>
+                </div>
+                <div class="story-content">
+                    <h3 class="story-title">Classroom management techniques for new tutors</h3>
+                </div>
+            </div>
+
+            <div class="story-card small-card">
+                <div class="story-image-wrapper">
+                    <img src="https://i.ibb.co/3k5fHw1/story5-small.jpg" alt="Kids playing with blocks" class="story-card-image">
+                    <span class="story-date">July 19, 2019</span>
+                </div>
+                <div class="story-content">
+                    <h3 class="story-title">Conversation rhymes improve kids listening</h3>
+                </div>
+            </div>
+        </div>
+        <button class="view-all-button">View All</button>
+    </section>
+
+    <div class="bg-shapes">
+        <span class="shape triangle-top-left"></span>
+        <span class="shape circle-top-right"></span>
+        <span class="shape plus-bottom-left"></span>
+        <span class="shape x-bottom-right"></span>
+    </div>
+
+</body>
 </html>
